--- a/Caesar/Form1.resx
+++ b/Caesar/Form1.resx
@@ -117,4 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SouceRichTextBox.Text" xml:space="preserve">
+    <value>Анна Ахматова
+
+Я не любви Твоей прошу. 
+Она теперь в надежном месте... 
+Поверь,что я Твоей невесте 
+Ревнивых писем не пишу. 
+
+Но мудрые прими советы: 
+Дай ей читать мои стихи, 
+Дай ей хранить мои портреты — 
+Ведь так любезны женихи! 
+
+А этим дурочкам нужней 
+Сознанье полное победы, 
+Чем дружбы светлые беседы 
+И память первых нежных дней... 
+
+Когда же счастия гроши 
+Ты проживешь с подругой милой, 
+И для пресыщенной души 
+Все сразу станет так постыло — 
+
+В мою торжественную ночь 
+Не приходи. Тебя не знаю. 
+И чем могла б Тебе помочь? 
+От счастья я не исцеляю.</value>
+  </data>
 </root>
