change source text, message for error

--- a/Caesar/Form1.resx
+++ b/Caesar/Form1.resx
@@ -118,31 +118,46 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SouceRichTextBox.Text" xml:space="preserve">
-    <value>Анна Ахматова
+    <value>Я всегда твердил, что судьба - игра.
+Что зачем нам рыба, раз есть икра.
+Что готический стиль победит, как школа,
+как способность торчать, избежав укола.
+Я сижу у окна. За окном осина.
+Я любил немногих. Однако - сильно.
 
-Я не любви Твоей прошу. 
-Она теперь в надежном месте... 
-Поверь,что я Твоей невесте 
-Ревнивых писем не пишу. 
+Я считал, что лес - только часть полена.
+Что зачем вся дева, раз есть колено.
+Что, устав от поднятой веком пыли,
+русский глаз отдохнет на эстонском шпиле.
+Я сижу у окна. Я помыл посуду.
+Я был счастлив здесь, и уже не буду.
 
-Но мудрые прими советы: 
-Дай ей читать мои стихи, 
-Дай ей хранить мои портреты — 
-Ведь так любезны женихи! 
+Я писал, что в лампочке - ужас пола.
+Что любовь, как акт, лишена глагола.
+Что не знал Эвклид, что, сходя на конус,
+вещь обретает не ноль, но Хронос.
+Я сижу у окна. Вспоминаю юность.
+Улыбнусь порою, порой отплюнусь.
 
-А этим дурочкам нужней 
-Сознанье полное победы, 
-Чем дружбы светлые беседы 
-И память первых нежных дней... 
+Я сказал, что лист разрушает почку.
+И что семя, упавши в дурную почву,
+не дает побега; что луг с поляной
+есть пример рукоблудья, в Природе данный.
+Я сижу у окна, обхватив колени,
+в обществе собственной грузной тени.
 
-Когда же счастия гроши 
-Ты проживешь с подругой милой, 
-И для пресыщенной души 
-Все сразу станет так постыло — 
+Моя песня была лишена мотива,
+но зато ее хором не спеть. Не диво,
+что в награду мне за такие речи
+своих ног никто не кладет на плечи.
+Я сижу у окна в темноте; как скорый,
+море гремит за волнистой шторой.
 
-В мою торжественную ночь 
-Не приходи. Тебя не знаю. 
-И чем могла б Тебе помочь? 
-От счастья я не исцеляю.</value>
+Гражданин второсортной эпохи, гордо
+признаю я товаром второго сорта
+свои лучшие мысли и дням грядущим
+я дарю их как опыт борьбы с удушьем.
+Я сижу в темноте. И она не хуже
+в комнате, чем темнота снаружи.</value>
   </data>
 </root>
